# MultiProcProgramming

./: .gitignore
Practice/: 1.txt  2.txt  AS2.c  AS2.txt  AS2_1.c  AS2_2.c  CMakeLists.txt  class_1.c  divisors.c  gather.c  hello_world.c  run.sh
Practice/maps/: altern.map  default.map  topo.map
